# HIT_YMD_CV

./: README.md
week01/code_week01/: helloworld  helloworld.cpp  result.txt  t1.sh  t2.sh  计算机环境配置记录.md
week01/code_week01/mains/: test_1.cpp  test_10.cpp  test_11.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp
week01/第一周内容/: question_template.docx
week01/第一周内容/git文档/: GitStudy.md  GitStudy_dark.html  GitStudy_light.html
week01/第一周内容/工具学习/: 03_vscode_config.md
week02/code_week02/: CMakeLists.txt  HITCRT视觉组代码编写规范考核问卷.docx  a.out  main.cpp  picnorm  picnorm.c
week02/code_week02/include/: week2.h
week02/code_week02/src/: complex.cpp  findnumber.cpp  sortnumber.cpp  sortstdent.cpp
week02/第二周内容/第二周 CMake 入门/: CMake 入门.md  视频课教程.docx
week02/第二周内容/第二周 c++基础入门&性能优化/: picnorm.c  第二周C++作业.docx  第二周任务.docx
week03/code_week03/cppwork/: CMakeLists.txt  main.cpp
week03/code_week03/work1/: one.cpp
week03/code_week03/work2/: main.cpp
week03/code_week03/work3/: main.cpp
week03/第三周内容/: 第三周C++作业.docx  第三周任务书.md
week04/code_week04/test5/: CMakeLists.txt  test5.cpp
week04/code_week04/test5/include/: test5.h
week04/code_week04/test5/src/: addGame.cpp  deleteGame.cpp  print.cpp  printAccount.cpp  setAccout.cpp
week04/第四周内容/: curve_fitting.txt  第四周-任务书.md  第四周-坐标变换.md
week05/code_week05/week5/pcltest/: CMakeLists.txt  cylinder.pcd  test1.cpp  滤波操作总结.md
week05/code_week05/week5/pcltest/include/: pcltest.h
week05/第五周内容/: Eigen.md  data_no3.txt  data_no6.txt  第五周-任务书.md
(+44 files in other folders)
